# skillManager

./: README.md  prd.json  progress.txt  pyproject.toml  skillManager.sh
.claude/: settings.local.json
archive/2026-03-25-skill-manager/: progress.txt
scripts/ralph/: CLAUDE.md  progress.txt
src/skillmanager/: config.py  main.py  models.py  operations.py
tasks/: prd-copy-skills.md  prd-skill-manager.md
tests/: test_config.py  test_operations.py
