[project]
name = "skillmanager"
version = "0.1.0"
description = "GUI manager for Claude Code skills — clone repos, symlink skills to personal and project targets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.9.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
skillmanager = "skillmanager.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillmanager"]
